syntax = "proto3";

package proto.metrics.v1;

option go_package = "github.com/npavlov/go-metrics-service/proto/metrics/v1;metrics";


message Metric {
  string id = 1;
  enum Type {
    COUNTER = 0;
    GAUGE = 1;
  };
  Type mtype = 2;
  double value = 3;
  int64 delta = 4;
}

service MetricService {
  rpc SetMetrics(MetricsRequest) returns (MetricsResponse);
  rpc SetMetric(MetricRequest) returns (MetricResponse);
}

message MetricRequest {
  Metric metric = 1;
  bytes EncryptedMessage = 2;
}

message MetricResponse {
  bool status = 1;
  Metric metric = 2;
}


message MetricsRequest {
  repeated Metric items = 1;
  bytes EncryptedMessage = 2;
}

message MetricsResponse {
  bool status = 1;
  repeated Metric items = 2;
}

